--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
     <title>Timed Quiz</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 <body>
-    <header>
+    <header class="header">
         <div id="highscore">Highscore:</div>
-        <div id="timer">Timer</div>
+        <div id="score">Score:</div>
+        <div id="timer">Timer:</div>
     </header>
-    <div class="container">
-        <div id="question_container" class="hide">
-            <div id="question">question</div>
-            <div id="answers" class="grid">
-                <button class="button">Answer 1</button>
-                <button class="button">Answer 2</button>
-                <button class="button">Answer 3</button>
-                <button class="button">Answer 4</button>
+    <section>
+        <div class="container">
+            <div id="question_container" class="hidden">
+                <div id="question">question?</div>
+                <div id="answers" class="grid">
+                    <button class="button">Answer</button>
+                    <button class="button">Answer</button>
+                    <button class="button">Answer</button>
+                    <button class="button">Answer</button>
+                </div>
             </div>
-        </div>
-        <div class="controls">
-            <button id="start_button" class="start_button button">Start</button>
-            <button id="next_button" class="next_button button hide">Next</button>
-        </div>
+            <div class="controls">
+                <button id="start_button" class="start_button button">Start</button>
+                <button id="next_button" class="next_button button hidden">Next</button>
+            </div>
 
-    </div>
+        </div>
+    </section>
     <script src="assets/js/script.js"></script>
     
 </body>
